# 13906_FTC2024

./: README.md  build.common.gradle  build.dependencies.gradle  build.gradle  settings.gradle
FtcRobotController/src/main/java/org/firstinspires/ftc/robotcontroller/internal/: FtcRobotControllerActivity.java
Quartz/: build.gradle
Quartz/src/main/java/com/epiteugma/quartz/: DriveOdometry.kt  DriveTrain.kt  Odometry.kt
Quartz/src/main/java/com/epiteugma/quartz/math/: Axis.kt  TickDistance.kt  Vec.kt
TeamCode/: build.gradle
TeamCode/src/main/cpp/: CMakeLists.txt  constants.h  robot.cpp  robot.h
TeamCode/src/main/cpp/lib/: c_dc_motor.cpp  c_dc_motor.h  c_gamepad.cpp  c_gamepad.h  c_hardware_map.cpp  c_hardware_map.h  c_op_mode.cpp  c_op_mode.h  c_servo.cpp  c_servo.h  c_telemetry.cpp  c_telemetry.h
TeamCode/src/main/cpp/lib/hardware/: c_dc_motor.cpp  c_dc_motor.h  c_hardware_map.cpp  c_hardware_map.h  c_servo.cpp  c_servo.h  c_touchsensor.cpp  c_touchsensor.h
TeamCode/src/main/cpp/opmodes/: auton.cpp  auton.h  auton_park.cpp  auton_place.cpp  auton_placeBlue.cpp  auton_placeRed.cpp  drive.cpp  drive.h  feedforward_test.cpp  feedforward_test.h  native.cpp  native.h  regressor_test.cpp  regressor_test.h  servo_tuner.cpp  servo_tuner.h
TeamCode/src/main/cpp/opmodes/test/: odometry_test.cpp  odometry_test.h
TeamCode/src/main/cpp/profiles/: profiles.cpp  profiles.h
TeamCode/src/main/cpp/utils/: constants.h  drivetrain.cpp  drivetrain.h  maths.cpp  maths.h  odometry.cpp  odometry.h  utils.cpp  utils.h
TeamCode/src/main/cpp/utils/control/: feedforward.cpp  feedforward.h  pid.cpp  pid.h  trapezoidal_feedforward.cpp  trapezoidal_feedforward.h
TeamCode/src/main/cpp/utils/kinematics/: drivetrain.cpp  drivetrain.h
TeamCode/src/main/cpp/utils/odometry/: odometry.cpp  odometry.h
TeamCode/src/main/cpp/utils/profiles/: profiles.cpp  profiles.h
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/: Constants.java  Loader.java  Robot.java  Robot.kt
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/auton/: Actions.java  Auton.java  AutonAction.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/opmodes/: Auton.java  AutonPark.java  AutonPlace.java  AutonPlaceBlue.java  AutonPlaceRed.java  Drive.java  FeedForwardTest.java  RegressorTest.java  ServoTuner.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/test/: MecanumTest.kt  Native.kt  OdometryTest.kt
(+7 files in other folders)
